--- a/helm/ffc-grants-file-sender/templates/_container.yaml
+++ b/helm/ffc-grants-file-sender/templates/_container.yaml
@@ -1,4 +1,4 @@
-{{- define "ffc-template-node.container" -}}
+{{- define "ffc-grants-file-sender.container" -}}
 livenessProbe: {{ include "ffc-helm-library.http-get-probe" (list . .Values.livenessProbe) | nindent 4}}
 readinessProbe: {{ include "ffc-helm-library.http-get-probe" (list . .Values.readinessProbe) | nindent 4}}
 ports:
