--- a/helm/ffc-grants-file-sender/values.yaml
+++ b/helm/ffc-grants-file-sender/values.yaml
@@ -1,13 +1,13 @@
 environment: development
-name: ffc-template-node
-namespace: ffc-demo
-workstream: ffc-demo
-image: ffc-template-node
+name: ffc-grants-file-sender
+namespace: ffc-grants
+workstream: ffc-grants
+image: ffc-grants-file-sender
 
 labels: {}
 
 containerConfigMap:
-  name: ffc-template-node-config-map
+  name: ffc-grants-file-sender-config-map
 
 deployment:
   restartPolicy: Always
