Add ffc-messaging and application insights packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "ffc-grants-frontend",
   "version": "1.16.0",
   "description": "Frontend Grants microservice.",
@@ -32,6 +31,8 @@
     "@hapi/vision": "^6.0.1",
     "@hapi/wreck": "^17.0.0",
     "@hapi/yar": "^10.1.0",
+    "applicationinsights": "^1.8.10",
+    "ffc-messaging": "^2.1.1",
     "govuk-frontend": "^3.8.1",
     "joi": "^17.2.1",
     "nunjucks": "^3.2.3"
