Add Service Bus code and config (#3)
https://eaflood.atlassian.net/browse/FFTF-304

* Add ffc-messaging and application insights packages
* Update NPM packages to fix vuln
* Add service bus code and config, update Helm chart values

--- a/helm/ffc-grants-file-sender/templates/config-map.yaml
+++ b/helm/ffc-grants-file-sender/templates/config-map.yaml
@@ -3,4 +3,7 @@
 data:
   NODE_ENV: {{ quote .Values.environment }}
   PORT: {{ quote .Values.container.port }}
+  FILE_CREATED_TOPIC_ADDRESS: {{ quote .Values.container.fileCreatedTopicAddress }}
+  FILE_CREATED_SUBSCRIPTION_ADDRESS: {{ quote .Values.container.fileCreatedSubscriptionAddress }}
+  SERVICE_BUS_HOST: {{ quote .Values.container.messageQueueHost }}
 {{- end -}}
