--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,9 @@ services:
       target: production
     image: ffc-grants-file-sender
     container_name: ffc-grants-file-sender
-    environment: {}
+    environment:
+      SERVICE_BUS_HOST: ${SERVICE_BUS_HOST:-notset}
+      SERVICE_BUS_PASSWORD: ${SERVICE_BUS_PASSWORD:-notset}
+      SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
+      FILE_CREATED_SUBSCRIPTION_ADDRESS: ${FILE_CREATED_SUBSCRIPTION_ADDRESS:-notset}
+      FILE_CREATED_TOPIC_ADDRESS: ${FILE_CREATED_TOPIC_ADDRESS:-notset}
