Add Managed Identity settings to Helm chart (#4)
https://eaflood.atlassian.net/browse/FFTF-304

* Add Managed Identity to Helm chart

--- a/helm/ffc-grants-file-sender/values.yaml
+++ b/helm/ffc-grants-file-sender/values.yaml
@@ -6,6 +6,10 @@ image: ffc-grants-file-sender
 
 labels: {}
 
+azureIdentity:
+  clientID: not-a-real-clientID
+  resourceID: not-a-real-resourceID
+
 containerConfigMap:
   name: ffc-grants-file-sender-config-map
 
