--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -27,6 +27,10 @@ container:
   readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   port: 3000
+  messageQueueHost: dummy
+  eligibilityAnswersQueueAddress: eligibility-answers
+  projectDetailsQueueAddress: project-details
+  contactDetailsQueueAddress: contact-details
 
 livenessProbe:
   path: /healthz
