Add missing Helm Azure Identity values

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -6,6 +6,10 @@ image: ffc-grants-frontend
 
 labels: {}
 
+azureIdentity:
+  clientID: not-a-real-clientID
+  resourceID: not-a-real-resourceID
+
 containerConfigMap:
   name: ffc-grants-frontend-config-map
 
