Add Service Bus code and config (#15)
https://eaflood.atlassian.net/browse/FFTF-304

* Add ffc-messaging and application insights packages
* Update to node 14 version of Docker image
* Update NPM packages
* Add PR Queue provisioning
* Add queue env vars
* Add Azure Identity to Helm chart
* Add message senders

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -6,6 +6,10 @@ image: ffc-grants-frontend
 
 labels: {}
 
+azureIdentity:
+  clientID: not-a-real-clientID
+  resourceID: not-a-real-resourceID
+
 containerConfigMap:
   name: ffc-grants-frontend-config-map
 
@@ -27,6 +31,10 @@ container:
   readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   port: 3000
+  messageQueueHost: dummy
+  eligibilityAnswersQueueAddress: eligibility-answers
+  projectDetailsQueueAddress: project-details
+  contactDetailsQueueAddress: contact-details
 
 livenessProbe:
   path: /healthz
