--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,9 @@ services:
     environment:
       NODE_ENV: production
       SITE_URL: localhost:3000
+      SERVICE_BUS_HOST: ${SERVICE_BUS_HOST:-notset}
+      SERVICE_BUS_PASSWORD: ${SERVICE_BUS_PASSWORD:-notset}
+      SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
+      ELIGIBILITY_ANSWERS_QUEUE_ADDRESS: ${ELIGIBILITY_ANSWERS_QUEUE_ADDRESS:-notset}
+      PROJECT_DETAILS_QUEUE_ADDRESS: ${PROJECT_DETAILS_QUEUE_ADDRESS:-notset}
+      CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset}
