testing yar redis config

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       target: development
+    depends_on:
+      - redis
     image: ffc-grants-frontend-development
     environment:
       NODE_ENV: development
@@ -17,3 +19,13 @@ services:
     volumes:
       - ./app/:/home/node/app/
       - ./package.json:/home/node/package.json
+
+  redis:
+    image: redis:4.0.14
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+
+volumes:
+  redis_data:
