--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,7 @@ services:
       ELIGIBILITY_ANSWERS_QUEUE_ADDRESS: ${ELIGIBILITY_ANSWERS_QUEUE_ADDRESS:-notset}
       PROJECT_DETAILS_QUEUE_ADDRESS: ${PROJECT_DETAILS_QUEUE_ADDRESS:-notset}
       CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset}
+      REDIS_HOSTNAME: redis
+      REDIS_PORT: 6379
+      REDIS_PARTITION: ffc-grants-frontend
+      REDIS_PASSWORD: ""
