--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@azure/ms-rest-nodeauth": "^3.0.6",
     "@azure/service-bus": "^1.1.10",
+    "@hapi/catbox-redis": "^6.0.2",
     "@hapi/hapi": "^20.0.3",
     "@hapi/inert": "^6.0.2",
     "@hapi/vision": "^6.0.1",
