--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mini-css-extract-plugin": "^0.11.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "pally": "^0.2.3",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
