--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "ffc-messaging": "^2.1.1",
     "govuk-frontend": "^3.8.1",
     "joi": "^17.2.1",
-    "nunjucks": "^3.2.3",
-    "pa11y": "^5.3.0"
+    "nunjucks": "^3.2.3"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -48,7 +47,7 @@
     "mini-css-extract-plugin": "^0.11.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "pally": "^0.2.3",
+    "pa11y": "^5.3.0",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
