--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.20.1",
+  "version": "1.21.1",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
     "build": "webpack",
     "build:watch": "webpack --watch",
+    "lint": "standard",
+    "lint-fix": "standard --fix",
     "test": "jest --runInBand",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
     "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
