--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ffc-messaging": "^2.1.1",
     "govuk-frontend": "^3.8.1",
     "joi": "^17.2.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "pa11y-ci": "^2.4.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
