--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
+    "@hapi/catbox-memory": "^5.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
     "file-loader": "^6.1.0",
