--- a/helm/ffc-grants-frontend/templates/another-service.yaml
+++ b/helm/ffc-grants-frontend/templates/another-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ ffc-sfi-frontend | quote }}
+  name: ffc-sfi-frontend
   namespace: {{ .Values.namespace | quote }}
   labels:
     {{- include "ffc-helm-library.labels" . | nindent 4 }}
 spec:
   type: ExternalName
-  externalName: {{ ffc-sfi-frontend.ffc-sfi.svc.cluster.local | quote }}
+  externalName: ffc-sfi-frontend.ffc-sfi.svc.cluster.local
   ports:
     - name: port
       port: 80
