--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,11 @@ services:
     image: ffc-grants-frontend
     environment:
       NODE_ENV: production
-      SITE_URL: localhost:3000
+      SITE_URL: localhost:3000    
+      GOOGLE_TAG_MANAGER_KEY: 'GTM-M43KPG8'
       COOKIE_PASSWORD: 1234567890123456789012345678901234567890
       SERVICE_BUS_HOST: ${SERVICE_BUS_HOST:-notset}
       SERVICE_BUS_PASSWORD: ${SERVICE_BUS_PASSWORD:-notset}
       SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
       PROJECT_DETAILS_QUEUE_ADDRESS: ${PROJECT_DETAILS_QUEUE_ADDRESS:-notset}
-      CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset}
+      CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset} 
