Add cookie password to Helm chart

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -34,6 +34,7 @@ container:
   messageQueueHost: dummy
   projectDetailsQueueAddress: project-details
   contactDetailsQueueAddress: contact-details
+  cookiePassword: thisisnotarealpasswordthisisnotarealpassword
 
 livenessProbe:
   path: /healthz
