--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -1,8 +1,9 @@
 {{- include "ffc-helm-library.container-config-map" (list . "ffc-grants-frontend.config-map") -}}
 {{- define "ffc-grants-frontend.config-map" -}}
 data:
-  NODE_ENV: {{ quote .Values.environment }}
-  PORT: {{ quote .Values.container.port }}
+  NODE_ENV: {{ .Values.environment | quote }}
+  PORT: {{ .Values.container.port | quote }}
+  COOKIE_PASSWORD: {{ .Values.container.cookiePassword | quote }}
   {{- if .Values.pr }}
   SITE_URL: "{{ .Values.ingress.endpoint }}-{{ .Values.pr }}.{{ .Values.ingress.server }}"
   {{- else }}
