Incorporated review Comments
Incorporated review Comments

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
       "afterAll",
       "browser",
       "assert",
-      "$"
+      "$",
+      "XMLHttpRequest"
     ]
   },
   "nodemonConfig": {
