Feature/code cleanup (#65)
* fix /remaining-costs.test.js

* fix lint

* bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.43.2",
+  "version": "1.43.3",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -63,6 +63,7 @@
       "beforeEach",
       "expect",
       "it",
+      "test",
       "afterEach",
       "jest",
       "beforeAll",
