Integration with service
Updated Score Answer page
Added Test with mock service call.

--- a/package.json
+++ b/package.json
@@ -78,5 +78,11 @@
     "ignore": [
       "**/test-output/**"
     ]
-  }
+  },
+  "eslintConfig ":{
+    "rules": {
+      "no-control-regex": 0
+    }
+  },
+  "eslintIgnore": ["test-helper.js"]
 }
