--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -12,4 +12,7 @@ data:
   SERVICE_BUS_HOST: {{ quote .Values.container.messageQueueHost }}
   PROJECT_DETAILS_QUEUE_ADDRESS: {{ quote .Values.container.projectDetailsQueueAddress }}
   CONTACT_DETAILS_QUEUE_ADDRESS: {{ quote .Values.container.contactDetailsQueueAddress }}
+  BACKEND_POLLING_HOST: {{ .Values.container.backendPollingHost | quote }}
+  POLLING_INTERVAL: {{ .Values.container.pollingInterval | quote }}
+  POLLING_RETRIES: {{ .Values.container.pollingRetries | quote }}
 {{- end -}}
