--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,6 @@ services:
       SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
       PROJECT_DETAILS_QUEUE_ADDRESS: ${PROJECT_DETAILS_QUEUE_ADDRESS:-notset}
       CONTACT_DETAILS_QUEUE_ADDRESS: ${CONTACT_DETAILS_QUEUE_ADDRESS:-notset}
+      BACKEND_POLLING_HOST: http://host.docker.internal:3001
+      POLLING_INTERVAL: 200
+      POLLING_RETRIES: 20
