--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.45.1",
+  "version": "1.45.2",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -81,10 +81,12 @@
       "**/test-output/**"
     ]
   },
-  "eslintConfig ":{
+  "eslintConfig ": {
     "rules": {
       "no-control-regex": 0
     }
   },
-  "eslintIgnore": ["test-helper.js"]
+  "eslintIgnore": [
+    "test-helper.js"
+  ]
 }
