--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.49.8",
+  "version": "1.49.9",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "lint-fix": "standard --fix",
     "test": "jest --runInBand",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
-    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
+    "start:nodemon": "nodemon --verbose --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
   },
   "repository": {
     "type": "git",
