--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -6,6 +6,9 @@ image: ffc-grants-frontend
 
 labels: {}
 
+appInsights:
+  key: not-a-real-key
+
 azureIdentity:
   clientID: not-a-real-clientID
   resourceID: not-a-real-resourceID
