--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,5 @@ services:
       BACKEND_POLLING_HOST: http://host.docker.internal:3001
       POLLING_INTERVAL: 200
       POLLING_RETRIES: 20
+      APPINSIGHTS_CLOUDROLE: ffc-grants-frontend
+      APPINSIGHTS_INSTRUMENTATIONKEY:
