updated helm secret key

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,4 +24,4 @@ services:
       POLLING_INTERVAL: 200
       POLLING_RETRIES: 20
       APPINSIGHTS_CLOUDROLE: ffc-grants-frontend
-      APPINSIGHTS_INSTRUMENTATIONKEY:
+      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY:-notset}
