Feature/app insight (#92)
App Insight Added
Fix Autocomplete Off
Clean test code using jest.config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,3 +23,5 @@ services:
       BACKEND_POLLING_HOST: http://host.docker.internal:3001
       POLLING_INTERVAL: 200
       POLLING_RETRIES: 20
+      APPINSIGHTS_CLOUDROLE: ffc-grants-frontend
+      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY:-notset}
