--- a/helm/ffc-grants-frontend/templates/container-secret.yaml
+++ b/helm/ffc-grants-frontend/templates/container-secret.yaml
@@ -4,4 +4,5 @@ stringData:
   COOKIE_PASSWORD: {{ .Values.container.cookiePassword | quote }}
   AUTH_USERNAME: {{ .Values.container.authUsername | quote }}
   AUTH_PASSWORD_HASH: {{ .Values.container.authPasswordHash | quote }}
+  APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.appInsights.key | quote }}
 {{- end -}}
