--- a/helm/ffc-grants-file-sender/values.yaml
+++ b/helm/ffc-grants-file-sender/values.yaml
@@ -6,12 +6,19 @@ image: ffc-grants-file-sender
 
 labels: {}
 
+appInsights:
+  key: not-a-real-key
+
 azureIdentity:
   clientID: not-a-real-clientID
   resourceID: not-a-real-resourceID
 
 containerConfigMap:
   name: ffc-grants-file-sender-config-map
+
+containerSecret:
+  name: ffc-grants-file-sender-container-secret
+  type: Opaque
 
 deployment:
   restartPolicy: Always
@@ -34,6 +41,13 @@ container:
   messageQueueHost: dummy
   fileCreatedTopicAddress: file-created
   fileCreatedSubscriptionAddress: file-sender
+  blobStorageConnectionString: blobby-blob
+  blobStorageContainerName: not-a-real-container
+  sharePointSiteId: not-a-real-value
+  sharePointTenantId: not-a-real-value
+  sharePointClientId: not-a-real-value
+  sharePointClientSecret: not-a-real-value
+  sharePointDocumentLibraryId: not-a-real-value
 
 livenessProbe:
   path: /healthz
