--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,10 @@ services:
       SERVICE_BUS_USER: ${SERVICE_BUS_USER:-notset}
       FILE_CREATED_SUBSCRIPTION_ADDRESS: ${FILE_CREATED_SUBSCRIPTION_ADDRESS:-notset}
       FILE_CREATED_TOPIC_ADDRESS: ${FILE_CREATED_TOPIC_ADDRESS:-notset}
+      BLOB_STORAGE_CONNECTION_STRING: ${BLOB_STORAGE_CONNECTION_STRING:-notset}
+      BLOB_STORAGE_CONTAINER_NAME: ${BLOB_STORAGE_CONTAINER_NAME:-notset}
+      SHAREPOINT_SITE_ID: ${SHAREPOINT_SITE_ID:-notset}
+      SHAREPOINT_TENANT_ID: ${SHAREPOINT_TENANT_ID:-notset}
+      SHAREPOINT_CLIENT_ID: ${SHAREPOINT_CLIENT_ID:-notset}
+      SHAREPOINT_CLIENT_SECRET: ${SHAREPOINT_CLIENT_SECRET:-notset}
+      SHAREPOINT_DOCUMENT_LIBRARY_ID: ${SHAREPOINT_DOCUMENT_LIBRARY_ID:-notset}
