--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "standard",
     "lint-fix": "standard --fix",
     "test": "jest --runInBand",
+    "test:watch": "jest --watch",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
     "start:nodemon": "nodemon --verbose --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
   },
