--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.56.0",
+  "version": "1.57.0",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "applicationinsights": "^1.8.10",
     "bcrypt": "^5.0.1",
     "ffc-messaging": "^2.1.1",
+    "ffc-protective-monitoring": "^1.0.0",
     "govuk-frontend": "^3.11.0",
     "joi": "^17.2.1",
     "nunjucks": "^3.2.3",
