--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-frontend",
-  "version": "1.54.12",
+  "version": "1.57.0",
   "description": "Frontend Grants microservice.",
   "main": "app/index.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "standard",
     "lint-fix": "standard --fix",
     "test": "jest --runInBand",
+    "test:watch": "jest --watch",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
     "start:nodemon": "nodemon --verbose --inspect=0.0.0.0 --ext js,njk --legacy-watch app/index.js"
   },
@@ -37,9 +38,11 @@
     "applicationinsights": "^1.8.10",
     "bcrypt": "^5.0.1",
     "ffc-messaging": "^2.1.1",
+    "ffc-protective-monitoring": "^1.0.0",
     "govuk-frontend": "^3.11.0",
     "joi": "^17.2.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
