Hook up redis for yar

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,8 @@ services:
       POLLING_RETRIES: 20
       APPINSIGHTS_CLOUDROLE: ffc-grants-frontend
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY:-notset}
+      REDIS_HOSTNAME: redis
+      REDIS_PORT: 6379
+      REDIS_PARTITION: ffc-grants-frontend
+      REDIS_PASSWORD: ""
+      SESSION_CACHE_TTL: 3600000
