--- a/helm/ffc-grants-frontend/templates/config-map.yaml
+++ b/helm/ffc-grants-frontend/templates/config-map.yaml
@@ -14,6 +14,10 @@ data:
   CONTACT_DETAILS_QUEUE_ADDRESS: {{ .Values.container.contactDetailsQueueAddress | quote }}
   BACKEND_POLLING_HOST: {{ .Values.container.backendPollingHost | quote }}
   POLLING_INTERVAL: {{ .Values.container.pollingInterval | quote }}
-  POLLING_RETRIES: {{ .Values.container.pollingRetries | quote }} 
+  POLLING_RETRIES: {{ .Values.container.pollingRetries | quote }}
   APPINSIGHTS_CLOUDROLE: {{ .Values.name }}
+  REDIS_HOSTNAME: {{ .Values.container.redisHostname | quote }}
+  REDIS_PORT: {{ .Values.container.redisPort | quote }}
+  REDIS_PARTITION: {{ .Values.container.redisPartition | quote }}
+  SESSION_CACHE_TTL: {{ .Values.container.sessionCacheTTL | quote }}
 {{- end -}}
