--- a/helm/ffc-grants-frontend/templates/container-secret.yaml
+++ b/helm/ffc-grants-frontend/templates/container-secret.yaml
@@ -5,4 +5,5 @@ stringData:
   AUTH_USERNAME: {{ .Values.container.authUsername | quote }}
   AUTH_PASSWORD_HASH: {{ .Values.container.authPasswordHash | quote }}
   APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.appInsights.key | quote }}
+  REDIS_PASSWORD: {{ .Values.container.redisPassword | quote }}
 {{- end -}}
