--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -8,9 +8,11 @@ services:
     build:
       context: .
       target: development
+    depends_on:
+      - redis
     image: ffc-grants-frontend-development
     environment:
-      NODE_ENV: development   
+      NODE_ENV: development
       GOOGLE_TAG_MANAGER_KEY: 'GTM-WJ5C78H'
       GOOGLE_TAG_MANAGER_SERVER_KEY: 'UA-179628664-4'
     ports:
@@ -19,3 +21,13 @@ services:
     volumes:
       - ./app/:/home/node/app/
       - ./package.json:/home/node/package.json
+
+  redis:
+    image: redis:4.0.14
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6380:6379"
+
+volumes:
+  redis_data:
