Remove debugging and tune k8s

--- a/helm/ffc-grants-frontend/values.yaml
+++ b/helm/ffc-grants-frontend/values.yaml
@@ -22,12 +22,16 @@ containerSecret:
 
 deployment:
   restartPolicy: Always
-  priorityClassName: low
+  priorityClassName: high
   replicas: 2
-  minReadySeconds: 5
+  minReplicas: 2
+  maxReplicas: 4
+  minReadySeconds: 2
   redeployOnChange: update this field to force a change
   runAsNonRoot: true
   runAsUser: 1000
+  cpuThreshold: 60
+  memoryThreshold: 60
 
 container:
   imagePullPolicy: IfNotPresent
@@ -57,16 +61,18 @@ container:
 livenessProbe:
   path: /healthz
   port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
+  initialDelaySeconds: 30
+  periodSeconds: 30
+  timeoutSeconds: 5
+  failureThreshold: 5
 
 readinessProbe:
   path: /healthy
   port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
+  initialDelaySeconds: 20
+  periodSeconds: 30
+  timeoutSeconds: 5
+  failureThreshold: 5
 
 service:
   port: 80
