--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-grants-file-sender",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "FFC Grants file sender microservice",
   "homepage": "https://github.com/DEFRA/ffc-grants-file-sender",
   "main": "app/index.js",
@@ -18,6 +18,7 @@
     "@hapi/wreck": "^17.1.0",
     "@pnp/nodejs-commonjs": "^2.3.0",
     "applicationinsights": "^1.8.10",
+    "ffc-protective-monitoring": "^1.0.0",
     "ffc-messaging": "^2.1.1",
     "joi": "^17.4.0"
   },
